# QT-Demo

./: .gitignore  CMakeLists.txt
src/: main.cpp  qtdemo.cpp  qtdemo.h  qtdemo.ui  setting.ui  settingsdialog.cpp  settingsdialog.h
